README.md, removed warning, lightened the filter